# image-processing-suite

./: .gitignore  CMakeLists.txt  README.md
include/: buffer.hpp  image.hpp  node.hpp
include/decoder/: png.hpp
inlcude/: buffer.hpp  image.hpp
inlcude/decoder/: png.hpp
src/: image.cpp  node.cpp
